Fix background image overscroll on mobile

--- a/app/Welcome.module.css
+++ b/app/Welcome.module.css
@@ -8,7 +8,7 @@
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
